corrected alignment of login page for mobile app

--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -81,3 +81,9 @@
 .navbar-footer-login{
     margin-bottom: 0px !important;
 }
+@media(max-width:576px){
+    .navbar-footer-login{
+      position: relative;
+      top:60px;
+    }
+}
